vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__waveform__tests__reject_intertial_delay_mechanism.snap
---
source: vhdl_syntax/src/parser/productions/waveform.rs
expression: "to_test_text(Parser::delay_mechanism, \"reject 2 ns inertial\")"
---
InertialDelayMechanism
  RejectClause
    Keyword(Reject)
    PhysicalLiteralExpression
      PhysicalLiteral
        AbstractLiteral '2'
        Name
          NameDesignatorPrefix
            Identifier 'ns'
  Keyword(Inertial)
