vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__waveform__tests__transport_delay_mechanism.snap
---
source: vhdl_syntax/src/parser/productions/waveform.rs
expression: "to_test_text(Parser::delay_mechanism, \"transport\")"
---
TransportDelayMechanism
  Keyword(Transport)
