vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__waveform__tests__unaffected_waveform.snap
---
source: vhdl_syntax/src/parser/productions/waveform.rs
expression: "to_test_text(Parser::waveform, \"unaffected\")"
---
UnaffectedWaveform
  Keyword(Unaffected)
