vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__waveform__tests__waveform.snap
---
source: vhdl_syntax/src/parser/productions/waveform.rs
expression: "to_test_text(Parser::waveform, \"bar(1 to 3)\")"
---
WaveformElements
  WaveformElement
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'bar'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  BinaryExpression
                    LiteralExpression
                      AbstractLiteral '1'
                    Keyword(To)
                    LiteralExpression
                      AbstractLiteral '3'
          RightPar
